-- Copyright 2017 Samplecount S.L.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.
name:                shake-ci
version:             0.1.0.0
synopsis:            Shake utilities for continuous integration
-- description:
homepage:            https://github.com/samplecount/shake-ci#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Samplecount S.L.
maintainer:          stefan@samplecount.com
copyright:           2017 Samplecount S.L.
category:            Development

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  
library
  hs-source-dirs:      src
  exposed-modules:     Development.Shake.CI.Env
                       Development.Shake.CI.Slack
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       shake,
                       text,
                       wreq
  default-language:    Haskell2010

test-suite shake-ci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shake-ci
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/samplecount/shake-ci
